--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#2563eb",  // or your brand color
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/dollarbucks apple icon.svg",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "180x180"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/dollarbucks apple icon.svg",
       "type": "image/png",
       "sizes": "512x512"
     }
