--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.10",
+    "lucide-react": "^0.523.0",
     "mathjs": "^14.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
